tests/files/flow_controller_tests/should_run/061.cmdr
x = 5.9;
print floor(x);