tests/files/flow_controller_tests/should_fail/112.cmdr
x = true;
print arccoth(x);